Arrow alignment fix

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -391,4 +391,9 @@ input{
     }
 }
 
+.sublinks{
+	text-align: center;
+     padding-top: 20px;
+}
+
 
